Restructure C file layout
* Move extension into ext and lib folders
* Moved coverage into submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
-[submodule "extensions/prefix_sum"]
-	path = extensions/prefix_sum
+[submodule "coverage"]
+	path = coverage
+	url = https://github.com/cronin101/HadopeCoverage
+[submodule "ext/lib/prefix_sum"]
+	path = ext/lib/prefix_sum
 	url = https://github.com/cronin101/OpenclPrefixSum
